[ery] Add App.proxy_required field
