# api/ery/app.pb.go
@@ -59,10 +59,12 @@ type App struct {
 	// Output only.
 	Ip string `protobuf:"bytes,4,opt,name=ip,proto3" json:"ip,omitempty"`
 	// Required.
-	Ports                []*App_Port `protobuf:"bytes,5,rep,name=ports,proto3" json:"ports,omitempty"`
-	XXX_NoUnkeyedLiteral struct{}    `json:"-"`
-	XXX_unrecognized     []byte      `json:"-"`
-	XXX_sizecache        int32       `json:"-"`
+	Ports []*App_Port `protobuf:"bytes,5,rep,name=ports,proto3" json:"ports,omitempty"`
+	// Optional.
+	ProxyRequired        bool     `protobuf:"varint,6,opt,name=proxy_required,json=proxyRequired,proto3" json:"proxy_required,omitempty"`
+	XXX_NoUnkeyedLiteral struct{} `json:"-"`
+	XXX_unrecognized     []byte   `json:"-"`
+	XXX_sizecache        int32    `json:"-"`
 }
 
 func (m *App) Reset()         { *m = App{} }
@@ -123,6 +125,13 @@ func (m *App) GetPorts() []*App_Port {
 		return m.Ports
 	}
 	return nil
+}
+
+func (m *App) GetProxyRequired() bool {
+	if m != nil {
+		return m.ProxyRequired
+	}
+	return false
 }
 
 type App_Port struct {
@@ -424,42 +433,44 @@ func init() {
 func init() { proto.RegisterFile("app.proto", fileDescriptor_e0f9056a14b86d47) }
 
 var fileDescriptor_e0f9056a14b86d47 = []byte{
-	// 559 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x9c, 0x54, 0xcd, 0x6e, 0xd3, 0x40,
-	0x10, 0x26, 0x71, 0x7e, 0x9a, 0x21, 0x09, 0xee, 0x48, 0x44, 0xc1, 0x81, 0x52, 0xb9, 0x14, 0x15,
-	0x84, 0xd6, 0x52, 0x38, 0xf0, 0x77, 0x0a, 0x2d, 0x42, 0x48, 0x08, 0x45, 0x86, 0x4a, 0x08, 0x0e,
-	0x91, 0x93, 0x2c, 0xae, 0x45, 0xe2, 0x1d, 0xbc, 0x9b, 0xd2, 0x08, 0x71, 0xe1, 0x15, 0x78, 0x0a,
-	0x5e, 0x80, 0x87, 0xe0, 0xca, 0x2b, 0xf0, 0x20, 0xc8, 0xbb, 0x71, 0xda, 0xb8, 0xe9, 0xa5, 0xb7,
-	0xdd, 0x99, 0x6f, 0xbe, 0xf9, 0xe6, 0x1b, 0x69, 0xa0, 0x16, 0x10, 0x31, 0x4a, 0x84, 0x12, 0x58,
-	0x97, 0xc9, 0xf1, 0x88, 0x85, 0x93, 0x13, 0xc6, 0x93, 0xb9, 0x73, 0x33, 0x14, 0x22, 0x9c, 0x70,
-	0x2f, 0xa0, 0xc8, 0x0b, 0xe2, 0x58, 0xa8, 0x40, 0x45, 0x22, 0x96, 0x06, 0xeb, 0x74, 0x16, 0x59,
-	0xfd, 0x1b, 0xce, 0x3e, 0x79, 0x7c, 0x4a, 0x6a, 0x6e, 0x92, 0xee, 0xef, 0x22, 0x58, 0x3d, 0x22,
-	0xbc, 0x0e, 0x95, 0x80, 0x68, 0x10, 0x8d, 0xdb, 0x85, 0xed, 0xc2, 0x5e, 0xcd, 0x2f, 0x07, 0x44,
-	0xaf, 0xc6, 0x88, 0x50, 0x8a, 0x83, 0x29, 0x6f, 0x17, 0x75, 0x50, 0xbf, 0xd1, 0x81, 0x8d, 0x23,
-	0x21, 0x95, 0x8e, 0x5b, 0x3a, 0xbe, 0xfc, 0x63, 0x13, 0x8a, 0x11, 0xb5, 0x4b, 0x3a, 0x5a, 0x8c,
-	0x08, 0x1f, 0x40, 0x99, 0x44, 0xa2, 0x64, 0xbb, 0xbc, 0x6d, 0xed, 0x5d, 0xed, 0xb6, 0xd8, 0x59,
-	0xdd, 0xac, 0x47, 0xc4, 0xfa, 0x22, 0x51, 0xbe, 0x01, 0x39, 0xbf, 0x0a, 0x50, 0x4a, 0xff, 0xf8,
-	0x18, 0xaa, 0x31, 0x57, 0x5f, 0x45, 0xf2, 0x59, 0xcb, 0x69, 0x76, 0xb7, 0xd6, 0x17, 0xb2, 0x37,
-	0x06, 0xe5, 0x67, 0x70, 0xdc, 0x85, 0x66, 0xc2, 0xbf, 0xcc, 0xb8, 0x54, 0x7c, 0x3c, 0x48, 0x59,
-	0xb5, 0xf4, 0x86, 0xdf, 0x58, 0x46, 0x75, 0x83, 0x1d, 0x68, 0x04, 0x52, 0x46, 0x61, 0x9c, 0xa1,
-	0x2c, 0x8d, 0xaa, 0x67, 0xc1, 0x14, 0xe4, 0x76, 0xa0, 0xba, 0xe0, 0xc7, 0x2a, 0x58, 0xef, 0xf6,
-	0xfb, 0xf6, 0x95, 0xf4, 0x71, 0x78, 0xd0, 0xb7, 0x0b, 0xee, 0x26, 0x5c, 0x7b, 0x1d, 0x49, 0xd5,
-	0x23, 0x92, 0xbe, 0xa1, 0x76, 0x9f, 0x80, 0x7d, 0x1a, 0x92, 0x24, 0x62, 0xc9, 0x71, 0x17, 0x4a,
-	0x01, 0x91, 0x6c, 0x17, 0xf4, 0xfc, 0x9b, 0xe7, 0xc6, 0xf0, 0x75, 0xda, 0xbd, 0x0b, 0x8d, 0x97,
-	0x3c, 0xad, 0x5c, 0x70, 0x5d, 0xb0, 0x0f, 0xf7, 0x11, 0xd8, 0xfb, 0x09, 0x0f, 0x14, 0x3f, 0x03,
-	0xdd, 0x01, 0x2b, 0x20, 0xd2, 0xb8, 0xb5, 0x1d, 0xd2, 0x6c, 0x5a, 0x78, 0x48, 0xe3, 0x4b, 0x14,
-	0xde, 0x03, 0xfb, 0x80, 0x4f, 0xf8, 0x4a, 0xe1, 0x7a, 0x71, 0xdd, 0x3f, 0x16, 0x40, 0x8f, 0xe8,
-	0x2d, 0x4f, 0x8e, 0xa3, 0x11, 0xc7, 0xf7, 0xb0, 0x91, 0xd9, 0x81, 0xb7, 0x56, 0xd9, 0x73, 0xce,
-	0x39, 0x5b, 0x17, 0xa5, 0x8d, 0x8b, 0x6e, 0xe3, 0xc7, 0xdf, 0x7f, 0x3f, 0x8b, 0x55, 0x2c, 0x7b,
-	0xa9, 0x5b, 0xd8, 0x87, 0x8a, 0x71, 0x0b, 0x3b, 0xab, 0x85, 0x2b, 0x1e, 0x3a, 0xe7, 0x47, 0x72,
-	0x5b, 0x9a, 0xc8, 0xc6, 0xa6, 0x26, 0xf2, 0xbe, 0x99, 0x31, 0xbe, 0xa3, 0x0f, 0xb5, 0xa5, 0xaf,
-	0x98, 0x53, 0x93, 0x37, 0x7c, 0x1d, 0x2f, 0x6a, 0xde, 0xba, 0x6b, 0x04, 0x3e, 0x4d, 0x9d, 0xc3,
-	0x01, 0xd4, 0x96, 0x96, 0xe7, 0x39, 0xf3, 0xbb, 0x58, 0xc7, 0x79, 0x5b, 0x73, 0xde, 0xe8, 0xe2,
-	0xa9, 0x56, 0xb6, 0xd0, 0x6b, 0x1a, 0x7c, 0x84, 0xda, 0x72, 0x35, 0xf9, 0x06, 0xf9, 0x9d, 0x39,
-	0x2d, 0x66, 0xce, 0x00, 0xcb, 0xce, 0x00, 0x7b, 0x91, 0x9e, 0x81, 0xcc, 0x91, 0xfb, 0x39, 0x47,
-	0x9e, 0xdf, 0xf9, 0xe0, 0x86, 0x91, 0x3a, 0x9a, 0x0d, 0xd9, 0x48, 0x4c, 0xbd, 0x94, 0xdb, 0x0b,
-	0x27, 0x27, 0xfa, 0xc4, 0xf0, 0x64, 0xfe, 0x8c, 0x27, 0xf3, 0x01, 0x0d, 0x87, 0x15, 0xcd, 0xf6,
-	0xf0, 0x7f, 0x00, 0x00, 0x00, 0xff, 0xff, 0x61, 0x46, 0xe0, 0x9a, 0x9b, 0x04, 0x00, 0x00,
+	// 581 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x9c, 0x54, 0xcf, 0x6e, 0xd3, 0x4e,
+	0x10, 0xfe, 0x39, 0xce, 0x9f, 0x66, 0x7e, 0x75, 0x70, 0x57, 0xa2, 0x32, 0x2e, 0x94, 0xca, 0xa5,
+	0x28, 0x20, 0xb4, 0x96, 0xc2, 0x81, 0x7f, 0xa7, 0xd0, 0x22, 0x84, 0x84, 0x50, 0x64, 0xa8, 0x84,
+	0xe0, 0x10, 0x39, 0xc9, 0xe2, 0x5a, 0x24, 0xde, 0x61, 0x77, 0x53, 0x12, 0x21, 0x2e, 0xbc, 0x02,
+	0x4f, 0xc1, 0xab, 0x70, 0xe5, 0xcc, 0x8d, 0x07, 0x41, 0xbb, 0x8e, 0xd3, 0xc6, 0x4d, 0x2f, 0xdc,
+	0x76, 0xbf, 0xf9, 0xe6, 0x9b, 0x99, 0x6f, 0xa4, 0x81, 0x66, 0x8c, 0x48, 0x51, 0x70, 0xc5, 0xc9,
+	0xa6, 0x14, 0xa7, 0x43, 0x9a, 0x8c, 0x67, 0x94, 0x89, 0xb9, 0x7f, 0x3d, 0xe1, 0x3c, 0x19, 0xb3,
+	0x30, 0xc6, 0x34, 0x8c, 0xb3, 0x8c, 0xab, 0x58, 0xa5, 0x3c, 0x93, 0x39, 0xd7, 0xdf, 0x59, 0x44,
+	0xcd, 0x6f, 0x30, 0xfd, 0x10, 0xb2, 0x09, 0xaa, 0x79, 0x1e, 0x0c, 0x7e, 0x57, 0xc0, 0xee, 0x22,
+	0x92, 0xab, 0x50, 0x8f, 0x11, 0xfb, 0xe9, 0xc8, 0xb3, 0xf6, 0xac, 0x76, 0x33, 0xaa, 0xc5, 0x88,
+	0x2f, 0x46, 0x84, 0x40, 0x35, 0x8b, 0x27, 0xcc, 0xab, 0x18, 0xd0, 0xbc, 0x89, 0x0f, 0x1b, 0x27,
+	0x5c, 0x2a, 0x83, 0xdb, 0x06, 0x5f, 0xfe, 0x49, 0x0b, 0x2a, 0x29, 0x7a, 0x55, 0x83, 0x56, 0x52,
+	0x24, 0xf7, 0xa0, 0x86, 0x5c, 0x28, 0xe9, 0xd5, 0xf6, 0xec, 0xf6, 0xff, 0x9d, 0x6d, 0x7a, 0xbe,
+	0x6f, 0xda, 0x45, 0xa4, 0x3d, 0x2e, 0x54, 0x94, 0x93, 0xc8, 0x01, 0xb4, 0x50, 0xf0, 0xd9, 0xbc,
+	0x2f, 0xd8, 0xa7, 0x69, 0x2a, 0xd8, 0xc8, 0xab, 0xef, 0x59, 0xed, 0x8d, 0xc8, 0x31, 0x68, 0xb4,
+	0x00, 0xfd, 0x1f, 0x16, 0x54, 0x75, 0x1a, 0x79, 0x08, 0x8d, 0x8c, 0xa9, 0xcf, 0x5c, 0x7c, 0x34,
+	0x5d, 0xb7, 0x3a, 0xbb, 0xeb, 0xf5, 0xe9, 0xab, 0x9c, 0x15, 0x15, 0x74, 0x5d, 0x49, 0xd7, 0x60,
+	0x52, 0xb1, 0x51, 0x5f, 0x17, 0x37, 0x13, 0x3a, 0x91, 0xb3, 0x44, 0x4d, 0x81, 0x7d, 0x70, 0x62,
+	0x29, 0xd3, 0x24, 0x2b, 0x58, 0xb6, 0x61, 0x6d, 0x16, 0xa0, 0x26, 0x05, 0x3b, 0xd0, 0x58, 0xe8,
+	0x93, 0x06, 0xd8, 0x6f, 0x0e, 0x7b, 0xee, 0x7f, 0xfa, 0x71, 0x7c, 0xd4, 0x73, 0xad, 0x60, 0x0b,
+	0xae, 0xbc, 0x4c, 0xa5, 0xea, 0x22, 0xca, 0x28, 0x97, 0x0e, 0x1e, 0x81, 0x7b, 0x06, 0x49, 0xe4,
+	0x99, 0x64, 0xe4, 0x00, 0xaa, 0x31, 0xa2, 0xf4, 0x2c, 0x63, 0xd3, 0xd6, 0x85, 0x31, 0x22, 0x13,
+	0x0e, 0x6e, 0x83, 0xf3, 0x9c, 0xe9, 0xcc, 0x85, 0xd6, 0x25, 0x6b, 0x0b, 0x1e, 0x80, 0x7b, 0x28,
+	0x58, 0xac, 0xd8, 0x39, 0xea, 0x3e, 0xd8, 0x31, 0xa2, 0xe1, 0xad, 0xad, 0xa0, 0xa3, 0x3a, 0xf1,
+	0x18, 0x47, 0xff, 0x90, 0x78, 0x07, 0xdc, 0x23, 0x36, 0x66, 0x2b, 0x89, 0xeb, 0x9b, 0xeb, 0xfc,
+	0xb4, 0x01, 0xba, 0x88, 0xaf, 0x99, 0x38, 0x4d, 0x87, 0x8c, 0xbc, 0x85, 0x8d, 0xc2, 0x0e, 0x72,
+	0x63, 0x55, 0xbd, 0xe4, 0x9c, 0xbf, 0x7b, 0x59, 0x38, 0x77, 0x31, 0x70, 0xbe, 0xfd, 0xfa, 0xf3,
+	0xbd, 0xd2, 0x20, 0xb5, 0x50, 0xbb, 0x45, 0x7a, 0x50, 0xcf, 0xdd, 0x22, 0x3b, 0xab, 0x89, 0x2b,
+	0x1e, 0xfa, 0x17, 0x47, 0x0a, 0xb6, 0x8d, 0x90, 0x4b, 0x5a, 0x46, 0x28, 0xfc, 0x92, 0x8f, 0xf1,
+	0x95, 0x44, 0xd0, 0x5c, 0xfa, 0x4a, 0x4a, 0xdd, 0x94, 0x0d, 0x5f, 0xa7, 0x4b, 0x8c, 0xee, 0x66,
+	0x90, 0x37, 0xf8, 0x58, 0x3b, 0x47, 0xfa, 0xd0, 0x5c, 0x5a, 0x5e, 0xd6, 0x2c, 0xef, 0x62, 0x9d,
+	0xe6, 0x4d, 0xa3, 0x79, 0xad, 0x43, 0xce, 0x7a, 0xa5, 0x8b, 0x7e, 0xf3, 0x02, 0xef, 0xa1, 0xb9,
+	0x5c, 0x4d, 0xb9, 0x40, 0x79, 0x67, 0xfe, 0x36, 0xcd, 0xaf, 0x05, 0x2d, 0xae, 0x05, 0x7d, 0xa6,
+	0xaf, 0x45, 0xe1, 0xc8, 0xdd, 0x92, 0x23, 0x4f, 0x6f, 0xbd, 0x0b, 0x92, 0x54, 0x9d, 0x4c, 0x07,
+	0x74, 0xc8, 0x27, 0xa1, 0xd6, 0x0e, 0x93, 0xf1, 0xcc, 0x5c, 0x22, 0x26, 0xe6, 0x4f, 0x98, 0x98,
+	0xf7, 0x71, 0x30, 0xa8, 0x1b, 0xb5, 0xfb, 0x7f, 0x03, 0x00, 0x00, 0xff, 0xff, 0x96, 0x16, 0xd3,
+	0x78, 0xc2, 0x04, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
